Cleaned up some new Integer() that should have been Integer.valueOf() found by find_bugs