@@ -82,14 +82,12 @@ public class ProviderTest {
 		
 		Map<Provider,Integer> map = new HashMap<Provider,Integer>();
 		
-		map.put(provider1, new Integer(1));
-		map.put(provider2, new Integer(2));
-		map.put(provider3, new Integer(3));
+		map.put(provider1, Integer.valueOf(1));
+		map.put(provider2, Integer.valueOf(2));
+		map.put(provider3, Integer.valueOf(3));
 		
-		Assert.assertEquals(Integer
-			.valueOf(1), map.get(provider1));
-		Assert.assertEquals(Integer
-			.valueOf(3), map.get(provider3));
+		Assert.assertEquals(Integer.valueOf(1), map.get(provider1));
+		Assert.assertEquals(Integer.valueOf(3), map.get(provider3));
 		Assert.assertEquals(provider2.toString(),provider2_dup.toString());
 		
 		provider1.delete();
